--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Recetas de cocina">
+    <meta name="keywords" content="Locro, asado, empanadas">
+    <meta name="author" content="Julian Dominguez">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Principal</title>
@@ -44,6 +47,9 @@
 </Header>
 
 <main>
+    <div class="logoplatocriollo">
+        <img src="imagenes/cocinacriolla.jpg" alt="">
+    </div>
     <br>
     <h2>Recetas de comidas tipicas de Argentina</h2>
     <br>
