--- a/contactos.html
+++ b/contactos.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Contactos para asesoramiento en eventos">
+    <meta name="keywords" content="Expertos en gastronomia de Argentina">
+    <meta name="author" content="Julian Dominguez">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
